force-app/main/default/objects/TradeEvent__e/TradeEvent__e.object-meta.xml
<CustomObject>
    <label>TradeEvent</label>
    <pluralLabel>TradeEvents</pluralLabel>
</CustomObject>