force-app/main/default/objects/TradeEvent__e/fields/BuyCurrency__c.field-meta.xml
<CustomField>
    <fullName>BuyCurrency__c</fullName>
    <label>Buy Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>