force-app/main/default/objects/TradeEvent__e/fields/SellAmount__c.field-meta.xml
<CustomField>
    <fullName>SellAmount__c</fullName>
    <label>Sell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>