force-app/main/default/objects/TradeEvent__e/fields/TradeId__c.field-meta.xml
<CustomField>
    <fullName>TradeId__c</fullName>
    <label>TradeId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>